--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,143 @@
+@import url("https://fonts.googleapis.com/css2?family=Ephesis&family=Noto+Sans+Display&family=Noto+Serif+KR:wght@400;500&family=Scheherazade+New&display=swap");
+@import "./reset.css";
+
+* {
+  box-sizing: border-box;
+}
+
+li {
+  font-size: 20px;
+  color: white;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  font-family: "Noto Serif KR", serif;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .hidden {
   display: none;
+}
+
+input {
+  border: none;
+  background-color: transparent;
+}
+
+input:focus {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.1);
+}
+
+input::placeholder {
+  text-align: center;
+  color: white;
+}
+header,
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+header {
+  margin-top: 150px;
+  margin-bottom: 30px;
+}
+
+/* $weather */
+
+#weather {
+  font-family: "Noto Sans Display", sans-serif;
+  font-size: 20px;
+
+  position: fixed;
+  top: 0px;
+  right: 20px;
+
+  width: 200px;
+  height: 200px;
+
+  color: white;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#weather span:first-child {
+  margin-bottom: 20px;
+}
+
+/* $clock */
+header #clock {
+  font-size: 120px;
+  margin-bottom: 100px;
+  color: white;
+}
+
+/* $greeting */
+
+header #greeting {
+  font-size: 40px;
+  color: white;
+}
+
+header #login-form input {
+  width: 400px;
+  height: 50px;
+  font-size: 30px;
+}
+/* todo-form  */
+li {
+  list-style-type: disc;
+  margin: 20px 0px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+#todo-form ul {
+  margin-bottom: 100px;
+}
+
+ul li button {
+  margin-left: 50px;
+  background-color: transparent;
+  border: none;
+  font-size: 3px;
+}
+
+ul li button:hover {
+  border-radius: 7px;
+  padding: 5px;
+  background-color: rgb(253, 254, 255);
+}
+
+section #todo-form input {
+  width: 400px;
+  height: 50px;
+  font-size: 25px;
+}
+
+/* $quote */
+
+#quote {
+  position: relative;
+  margin-top: 170px;
+}
+
+#quote span:first-child {
+  margin-right: 50px;
+  font-size: 25px;
+  font-family: "Scheherazade New", serif;
+}
+
+#quote span:last-child {
+  font-size: 23px;
+  font-family: "Ephesis", cursive;
 }
